--- a/src/bug_bounty_backend/Cargo.toml
+++ b/src/bug_bounty_backend/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-candid = "0.10"
-ic-cdk = "0.13"
-ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
+candid = "0.9.6"
+ic-cdk = "0.11.0"
+ic-cdk-macros = "0.8.1"
+ic-websocket-cdk = "0.3.2"
+ic-stable-structures = "0.6.0"
+serde = { version = "1.0.111", features = [] }
