--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.0.1",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.19",
     "dotenv": "^16.3.1",
+    "postcss": "^8.4.38",
     "sass": "^1.63.6",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
