--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/node": "^20.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0"
+    "react-just-parallax": "^3.1.16",
+    "react-router-dom": "^6.23.0",
+    "scroll-lock": "^2.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
