--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@dfinity/agent": "^0.15.7",
     "@dfinity/candid": "^0.15.7",
     "@dfinity/principal": "^0.15.7",
+    "@react-three/drei": "^9.105.5",
+    "@react-three/fiber": "^8.16.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-just-parallax": "^3.1.16",
     "react-router-dom": "^6.23.0",
-    "scroll-lock": "^2.1.5"
+    "scroll-lock": "^2.1.5",
+    "three": "^0.164.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
