--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@react-three/fiber": "^8.16.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
     "react-just-parallax": "^3.1.16",
     "react-router-dom": "^6.23.0",
     "scroll-lock": "^2.1.5",
+    "tailwind-merge": "^2.3.0",
     "three": "^0.164.1"
   },
   "devDependencies": {
